--- a/_config.yml
+++ b/_config.yml
@@ -198,3 +198,6 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+head-scripts:
+  - https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.1.2/chart.js
