--- a/_config.yml
+++ b/_config.yml
@@ -150,7 +150,7 @@ defaults:
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
       #permalink: /posts/:title/
-      permalink: pretty
+      permalink: /:categories/:year/:month/:day/:title
   - scope:
       path: _drafts
     values:
