--- a/_config.yml
+++ b/_config.yml
@@ -200,4 +200,4 @@ jekyll-archives:
     tag: tag
   permalinks:
     tag: /tags/:name/
-    category: /categories/:name/
+    category: /:categories/:name/
