--- a/_config.yml
+++ b/_config.yml
@@ -121,6 +121,9 @@ pwa:
 
 paginate: 10
 
+kramdown:
+  math_engine: katex
+
 # ------------ The following options are not recommended to be modified ------------------
 
 kramdown:
